--- a/index.html
+++ b/index.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header>
-        <nav>
-        <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="#"> Studio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Contacts</a></li>
+    <header class="header">
+        <nav class="header-navigation">
+        <a class="header-logo" href="#"><span>Web</span>Studio</a>
+            <ul header-list>
+                <li class="header-item"><a class="header-link" href="./index.html"> Studio</a></li>
+                <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link" href="#">Contacts</a></li>
             </ul>
-        </nav>
-            <address>
-                <ul>
-                    <li>
-                        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </nav  class="header-navigation">
+            <address class="adress">
+                <ul class="adress-list">
+                    <li class="adress-item">
+                        <a class="adress-link" "href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
-                    <li>
-                        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+                    <li class="adress-item">
+                        <a class="adress-link" "href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -30,15 +34,15 @@
     
     <main>
         <!-- Hero -->
-        <section>
-            <h1>Effective Solutions
+        <section class="hero">
+            <h1 class="hero-title">Effective Solutions
                 for Your Business</h1>
-                <button type="button">Order Service</button>
+                <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!-- Section1 -->
-        <section>
+        <section class="advantages">
             <h2>Advantages</h2>
-            <ul>
+            <ul class="advantages-list">
                 <li>
                     <h3>Strategy</h3>
                     <p>Our goal is to identify the business
