--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-        <a class="header-logo" href="#"><span>Web</span>Studio</a>
-            <ul header-list>
+        <a class="logo" href="#">Web<span class="header-logo">Studio</span></a>
+            <ul class="header-list">
                 <li class="header-item"><a class="header-link" href="./index.html"> Studio</a></li>
                 <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-item"><a class="header-link" href="#">Contacts</a></li>
             </ul>
-        </nav  class="header-navigation">
+        </nav>
             <address class="adress">
                 <ul class="adress-list">
                     <li class="adress-item">
-                        <a class="adress-link" "href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="adress-item">
-                        <a class="adress-link" "href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -40,75 +40,75 @@
                 <button class="hero-btn" type="button">Order Service</button>
         </section>
         <!-- Section1 -->
-        <section class="advantages">
+        <section class="techno">
             <h2>Advantages</h2>
-            <ul class="advantages-list">
-                <li>
-                    <h3>Strategy</h3>
-                    <p>Our goal is to identify the business
+            <ul class="techno-list">
+                <li class="techno-item">
+                    <h3 class="techno-title">Strategy</h3>
+                    <p class="techno-text">Our goal is to identify the business
                         problem to walk away with the perfect and creative solution. </p>
                 </li>
-                <li>
-                    <h3>Punctuality</h3>
-                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                <li class="techno-item">
+                    <h3 class="techno-title">Punctuality</h3>
+                    <p class="techno-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
                 </li>
-                <li>
-                    <h3>Diligence</h3>
-                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                <li class="techno-item">
+                    <h3 class="techno-title">Diligence</h3>
+                    <p class="techno-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
                 </li>
-                <li>
-                    <h3>Technologies</h3>
-                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                <li class="techno-item">
+                    <h3 class="techno-title">Technologies</h3>
+                    <p class="techno-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
         <!-- Section2 -->
-        <section>
-            <h2>What are we doing</h2>
-            <ul>
-                <li>
-                    <img src="./images/img1.jpg" alt="photo1" width="360" height="300">
+        <section class="doing">
+            <h2 class="doing-title">What are we doing</h2>
+            <ul class="doing-list">
+                <li class="doing-item">
+                    <img class="doing-image" src="./images/img1.jpg" alt="photo1" width="360" height="300">
                 </li>
-                <li>
-                    <img src="./images/img2.jpg" alt="photo2" width="360" height="300">
+                <li class="doing-item">
+                    <img class="doing-image" src="./images/img2.jpg" alt="photo2" width="360" height="300">
                 </li>
-                <li>
-                    <img src="./images/img3.jpg" alt="photo3"
+                <li class="doing-item">
+                    <img class="doing-image" src="./images/img3.jpg" alt="photo3"
                     width="360" height="300">
                 </li>
             </ul>
             </section>
         <!-- Section3 -->
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
-                    <img src="./images/photo1.jpg" alt="photomen" width="264" height="260">
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+        <section class="team">
+            <h2 class="team-title">Our Team</h2>
+            <ul class="team-list">
+                <li class="team-item">
+                    <img class="team-image" src="./images/photo1.jpg" alt="photomen" width="264" height="260">
+                    <h3 class="team-title-less">Mark Guerrero</h3>
+                    <p class="team-text">Product Designer</p>
                 </li>
-                <li>
-                    <img src="./images/photo2.jpg" alt="photoboy" width="264" height="260">
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>
+                <li class="team-item">
+                    <img class="team-image" src="./images/photo2.jpg" alt="photoboy" width="264" height="260">
+                    <h3 class="team-title-less">Tom Ford</h3>
+                    <p class="team-text">Frontend Developer</p>
                 </li>
-                <li>
-                    <img src="./images/photo3.jpg" alt="photodgirl" width="264" height="260">
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>Marketing
+                <li class="team-item">
+                    <img class="team-image" src="./images/photo3.jpg" alt="photodgirl" width="264" height="260">
+                    <h3 class="team-title-less">Camila Garcia</h3>
+                    <p class="team-text">Marketing</p>
                 </li>
-                <li>
-                    <img src="./images/photo4.jpg" alt="photoboy" width="264" height="260">
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                <li class="team-item">
+                    <img class="team-image" src="./images/photo4.jpg" alt="photoboy" width="264" height="260">
+                    <h3 class="team-title-less">Daniel Wilson</h3>
+                    <p class="team-text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+        <a class="logo" href="#">Web<span class="footer-logo">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
 </body>
