--- a/portfolio.html
+++ b/portfolio.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800family=Roboto:wght@400;500;700;900display=swap" rel="stylesheet">
     <title>WebStudio</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header class="header">
         <nav class="header-navigation">
-        <a class="header-logo" href="#"><span>Web</span>Studio</a>
-            <ul header-list>
+            <a class="logo" href="#">Web<span class="header-logo">Studio</span></a>
+            <ul class="header-list">
                 <li class="header-item"><a class="header-link" href="./index.html"> Studio</a></li>
                 <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-item"><a class="header-link" href="#">Contacts</a></li>
@@ -23,10 +23,10 @@
             <address class="adress">
                 <ul class="adress-list">
                     <li class="adress-item">
-                        <a class="adress-link" "href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="adress-item">
-                        <a class="adress-link" "href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -38,89 +38,82 @@
             <h2 hidden>Iformation</h2>
             <ul class="filters-list">
                 <li class="filters-item">
-                    <a href="" class="filters-link">
-                        <button type="button" class="filters=btn">All</button>
-                    </a>
+                    <button class="filters-btn" type="button">All</button>
                 </li>
                 <li class="filters-item">
-                    <a href="" class="filters-link">
-                        <button type="button" class="filters=btn">Web Site</button>
-                    </a>
+                    <button class="filters-btn" type="button">Web Site</button>
                 </li>
                 <li class="filters-item">
-                    <a href=""  class="filters-link">
-                        <button type="button" class="filters=btn">App</button>
-                    </a>
+                    <button class="filters-btn" type="button">App</button>
                 </li>
                 <li class="filters-item">
-                    <a href=""  class="filters-link">
-                        <button type="button" class="filters=btn">Design</button>
-                    </a>
+                    <button class="filters-btn" type="button">Design</button>
                 </li>
                 <li class="filters-item">
-                    <a href=""  class="filters-link">
-                        <button type="button" class="filters=btn">Marketing</button>
-                    </a>
+                    <button class="filters-btn" type="button">Marketing</button>
                 </li>
             </ul>
         </section>
-        <!-- Row-1 -->
-        <section class="row-1-section">
-            <ul class="row-1-list">
-                <li class=row-1-item>
-                    <img class="row-1-photo" src="./images/img-1.jpg" alt="photo-1" width="360" height="300">
-                    <h3 class="row-1-text">Banking App Interface Concept</h3>
-                    <h4 class="row-1-textfilter" >App</h4>
+
+        <!-- BANKING-->
+        <section class="banking-section">
+            <ul class="banking-list">
+                <li class="banking-item">
+                    <img class="banking-photo" src="./images/img-1.jpg" alt="photo-1" width="360" height="300">
+                    <h3 class="banking-text">Banking App Interface Concept</h3>
+                    <h4 class="banking-textfilter">App</h4>
                 </li>
-                <li class=row-1-item>
-                    <img class="row-1-photo"src="./images/img-2.jpg" alt="photo-2" width="360" height="300">
-                    <h3 class="row-1-text">Cashless Payment</h3>
-                    <h4 class="row-1-textfilter">Marketing</h4>
+                <li class="banking-item">
+                    <img class="banking-photo" src="./images/img-2.jpg" alt="photo-2" width="360" height="300">
+                    <h3 class="banking-text">Cashless Payment</h3>
+                    <h4 class="banking-textfilter">Marketing</h4>
                 </li>
-                <li class=row-1-item>
-                    <img class="row-1-photo"src="./images/img-3.jpg" alt="photo-3" width="360" height="300">
-                    <h3 class="row-1-text">Meditation App</h3>
-                    <h4 class="row-1-textfilter">App</h4>
-                </li>
-            </ul>
-        </section>
-        <!-- Row-2 -->
-        <section class="row-2-section">
-            <ul class="row-2-list">
-                <li class=row-2-item>
-                    <img class="row-2-photo" src="./images/img-4.jpg" alt="photo-4" width="360" height="300">
-                    <h3 class="row-2-text">Taxi Service</h3>
-                    <h4 class="row-2-textfilter" >Marketing</h4>
-                </li>
-                <li class=row-2-item>
-                    <img class="row-2-photo"src="./images/img-5.jpg" alt="photo-5" width="360" height="300">
-                    <h3 class="row-2-text">Screen Illustrations</h3>
-                    <h4 class="row-2-textfilter">Design</h4>
-                </li>
-                <li class=row-2-item>
-                    <img class="row-2-photo"src="./images/img-6.jpg" alt="photo-6" width="360" height="300">
-                    <h3 class="row-2-text">Online Courses</h3>
-                    <h4 class="row-2-textfilter">Marketing</h4>
+                <li class="banking-item">
+                    <img class="banking-photo" src="./images/img-3.jpg" alt="photo-3" width="360" height="300">
+                    <h3 class="banking-text">Meditation App</h3>
+                    <h4 class="banking-textfilter">App</h4>
                 </li>
             </ul>
         </section>
-        <!-- Row-3 -->
-        <section class="row-3-section">
-            <ul class="row-3-list">
-                <li class=row-3-item>
-                    <img class="row-3-photo" src="./images/img-7.jpg" alt="photo-7" width="360" height="300">
-                    <h3 class="row-3-text">Instagram Stories Concept</h3>
-                    <h4 class="row-3-textfilter" >Design</h4>
+
+        <!-- TAXI -->
+        <section class="taxi-section">
+            <ul class="taxi-list">
+                <li class="taxi-item">
+                    <img class="taxi-photo" src="./images/img-4.jpg" alt="photo-4" width="360" height="300">
+                    <h3 class="taxi-text">Taxi Service</h3>
+                    <h4 class="taxi-textfilter">Marketing</h4>
                 </li>
-                <li class=row-3-item>
-                    <img class="row-3-photo"src="./images/img-8.jpg" alt="photo-8" width="360" height="300">
-                    <h3 class="row-3-text">Organic Food</h3>
-                    <h4 class="row-3-textfilter">Web Site</h4>
+                <li class="taxi-item">
+                    <img class="taxi-photo" src="./images/img-5.jpg" alt="photo-5" width="360" height="300">
+                    <h3 class="taxi-text">Screen Illustrations</h3>
+                    <h4 class="taxi-textfilter">Design</h4>
                 </li>
-                <li class=row-3-item>
-                    <img class="row-3-photo"src="./images/img-9.jpg" alt="photo-9" width="360" height="300">
-                    <h3 class="row-3-text">Fresh Coffee</h3>
-                    <h4 class="row-3-textfilter">Web Site</h4>
+                <li class="taxi-item">
+                    <img class="taxi-photo" src="./images/img-6.jpg" alt="photo-6" width="360" height="300">
+                    <h3 class="taxi-text">Online Courses</h3>
+                    <h4 class="taxi-textfilter">Marketing</h4>
+                </li>
+            </ul>
+        </section>
+
+        <!-- INSTAGRAM -->
+        <section class="instagram-section">
+            <ul class="instagram-list">
+                <li class="instagram-item">
+                    <img class="instagram-photo" src="./images/img-7.jpg" alt="photo-7" width="360" height="300">
+                    <h3 class="instagram-text">Instagram Stories Concept</h3>
+                    <h4 class="instagram-textfilter" >Design</h4>
+                </li>
+                <li class="instagram-item">
+                    <img class="instagram-photo" src="./images/img-8.jpg" alt="photo-8" width="360" height="300">
+                    <h3 class="instagram-text">Organic Food</h3>
+                    <h4 class="instagram-textfilter">Web Site</h4>
+                </li>
+                <li class="instagram-item">
+                    <img class="instagram-photo" src="./images/img-9.jpg" alt="photo-9" width="360" height="300">
+                    <h3 class="instagram-text">Fresh Coffee</h3>
+                    <h4 class="instagram-textfilter">Web Site</h4>
                 </li>
             </ul>
         </section>
@@ -128,7 +121,7 @@
     </main>
     
     <footer class="footer">
-        <a class="footer-logo" href="./index.html">WebStudio</a>
+        <a class="logo" href="#">Web<span class="footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
