--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-        <a class="logo" href="#">Web<span class="header-logo">Studio</span></a>
-            <ul class="header-list">
-                <li class="header-item"><a class="header-link" href="./index.html"> Studio</a></li>
-                <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-link" href="#">Contacts</a></li>
+        <a class="logo link" href="#">Web<span class="header-logo">Studio</span></a>
+            <ul class="header-list list">
+                <li class="header-item"><a class="header-link link" href="./index.html"> Studio</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link link" href="#">Contacts</a></li>
             </ul>
         </nav>
             <address class="adress">
-                <ul class="adress-list">
+                <ul class="adress-list list" >
                     <li class="adress-item">
-                        <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="adress-item">
-                        <a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -42,7 +42,7 @@
         <!-- Section1 -->
         <section class="techno">
             <h2>Advantages</h2>
-            <ul class="techno-list">
+            <ul class="techno-list list">
                 <li class="techno-item">
                     <h3 class="techno-title">Strategy</h3>
                     <p class="techno-text">Our goal is to identify the business
@@ -65,7 +65,7 @@
         <!-- Section2 -->
         <section class="doing">
             <h2 class="doing-title">What are we doing</h2>
-            <ul class="doing-list">
+            <ul class="doing-list list">
                 <li class="doing-item">
                     <img class="doing-image" src="./images/img1.jpg" alt="photo1" width="360" height="300">
                 </li>
@@ -81,7 +81,7 @@
         <!-- Section3 -->
         <section class="team">
             <h2 class="team-title">Our Team</h2>
-            <ul class="team-list">
+            <ul class="team-list list">
                 <li class="team-item">
                     <img class="team-image" src="./images/photo1.jpg" alt="photomen" width="264" height="260">
                     <h3 class="team-title-less">Mark Guerrero</h3>
@@ -107,7 +107,7 @@
     </main>
     
     <footer class="footer">
-        <a class="logo" href="#">Web<span class="footer-logo">Studio</span></a>
+        <a class="logo link" href="#">Web<span class="footer-logo">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
