--- a/portfolio.html
+++ b/portfolio.html
@@ -14,20 +14,20 @@
 <body>
     <header class="header">
         <nav class="header-navigation">
-            <a class="logo" href="#">Web<span class="header-logo">Studio</span></a>
-            <ul class="header-list">
-                <li class="header-item"><a class="header-link" href="./index.html"> Studio</a></li>
-                <li class="header-item"><a class="header-link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-link" href="#">Contacts</a></li>
+            <a class="logo link" href="#">Web<span class="header-logo">Studio</span></a>
+            <ul class="header-list list">
+                <li class="header-item"><a class="header-link link" href="./index.html"> Studio</a></li>
+                <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-item"><a class="header-link link" href="#">Contacts</a></li>
             </ul>
         </nav>
             <address class="adress">
-                <ul class="adress-list">
+                <ul class="adress-list list">
                     <li class="adress-item">
-                        <a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                        <a class="adress-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="adress-item">
-                        <a class="adress-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+                        <a class="adress-link link" href="tel:+110001111111">+11 (000) 111-11-11</a>
                     </li>
                 </ul>
             </address>
@@ -37,7 +37,7 @@
         <section>
             <h1 hidden>Advantages</h1>
             <h2 hidden>Iformation</h2>
-            <ul class="filters-list">
+            <ul class="filters-list list">
                 <li class="filters-item">
                     <button class="filters-btn" type="button">All</button>
                 </li>
@@ -57,56 +57,74 @@
 
             <ul class="list">
                 <li class="banking-item">
-                    <img class="banking-photo" src="./images/img-1.jpg" alt="photo-1" width="360" height="300">
-                    <h3 class="banking-text">Banking App Interface Concept</h3>
-                    <h4 class="banking-textfilter">App</h4>
+                    <a  class="banking-link link" href="#">
+                        <img class="banking-photo" src="./images/img-1.jpg" alt="photo-1" width="360" height="300">
+                        <h2 class="banking-text">Banking App Interface Concept</h2>
+                        <p class="banking-desc">App</p>
+                    </a>
                 </li>
                 <li class="banking-item">
-                    <img class="banking-photo" src="./images/img-2.jpg" alt="photo-2" width="360" height="300">
-                    <h3 class="banking-text">Cashless Payment</h3>
-                    <h4 class="banking-textfilter">Marketing</h4>
+                    <a  class="banking-link link" href="#">
+                        <img class="banking-photo" src="./images/img-2.jpg" alt="photo-2" width="360" height="300">
+                        <h2 class="banking-text">Cashless Payment</h2>
+                        <p class="banking-desc">Marketing</p>
+                    </a>
                 </li>
                 <li class="banking-item">
-                    <img class="banking-photo" src="./images/img-3.jpg" alt="photo-3" width="360" height="300">
-                    <h3 class="banking-text">Meditation App</h3>
-                    <h4 class="banking-textfilter">App</h4>
+                    <a  class="banking-link link" href="#">
+                        <img class="banking-photo" src="./images/img-3.jpg" alt="photo-3" width="360" height="300">
+                        <h2 class="banking-text">Meditation App</h2>
+                        <p class="banking-desc">App</p>
+                    </a>
                 </li>
                 <li class="taxi-item">
-                    <img class="taxi-photo" src="./images/img-4.jpg" alt="photo-4" width="360" height="300">
-                    <h3 class="taxi-text">Taxi Service</h3>
-                    <h4 class="taxi-textfilter">Marketing</h4>
+                    <a class="taxi-link link" href="#">
+                        <img class="taxi-photo" src="./images/img-4.jpg" alt="photo-4" width="360" height="300">
+                        <h2 class="taxi-text">Taxi Service</h2>
+                        <p class="taxi-desc">Marketing</p>
+                    </a>
                 </li>
                 <li class="taxi-item">
-                    <img class="taxi-photo" src="./images/img-5.jpg" alt="photo-5" width="360" height="300">
-                    <h3 class="taxi-text">Screen Illustrations</h3>
-                    <h4 class="taxi-textfilter">Design</h4>
+                    <a class="taxi-link link" href="#">
+                        <img class="taxi-photo" src="./images/img-5.jpg" alt="photo-5" width="360" height="300">
+                        <h2 class="taxi-text">Screen Illustrations</h2>
+                        <p class="taxi-desc">Design</p>
+                    </a>
                 </li>
             <li class="taxi-item">
-                <img class="taxi-photo" src="./images/img-6.jpg" alt="photo-6" width="360" height="300">
-                <h3 class="taxi-text">Online Courses</h3>
-                <h4 class="taxi-textfilter">Marketing</h4>
+                <a class="taxi-link link" href="#">
+                    <img class="taxi-photo" src="./images/img-6.jpg" alt="photo-6" width="360" height="300">
+                    <h2 class="taxi-text">Online Courses</h2>
+                    <p class="taxi-desc">Marketing</p>
+                </a>
             </li>
             <li class="instagram-item">
-                <img class="instagram-photo" src="./images/img-7.jpg" alt="photo-7" width="360" height="300">
-                <h3 class="instagram-text">Instagram Stories Concept</h3>
-                <h4 class="instagram-textfilter" >Design</h4>
+                <a class="instagram-link link" href="#">
+                    <img class="instagram-photo" src="./images/img-7.jpg" alt="photo-7" width="360" height="300">
+                    <h2 class="instagram-text">Instagram Stories Concept</h2>
+                    <p class="instagram-desc" >Design</p>
+                </a>
             </li>
             <li class="instagram-item">
-                <img class="instagram-photo" src="./images/img-8.jpg" alt="photo-8" width="360" height="300">
-                <h3 class="instagram-text">Organic Food</h3>
-                <h4 class="instagram-textfilter">Web Site</h4>
+                <a class="instagram-link link" href="#">
+                    <img class="instagram-photo" src="./images/img-8.jpg" alt="photo-8" width="360" height="300">
+                    <h2 class="instagram-text">Organic Food</h2>
+                    <p class="instagram-desc">Web Site</p>
+                </a>
             </li>
             <li class="instagram-item">
-                <img class="instagram-photo" src="./images/img-9.jpg" alt="photo-9" width="360" height="300">
-                <h3 class="instagram-text">Fresh Coffee</h3>
-                <h4 class="instagram-textfilter">Web Site</h4>
+                <a  class="instagram-link link" href="#">
+                    <img class="instagram-photo" src="./images/img-9.jpg" alt="photo-9" width="360" height="300">
+                    <h2 class="instagram-text">Fresh Coffee</h2>
+                    <p class="instagram-desc">Web Site</p>
+                </a>
             </li>
         </ul>
         </section>
     </main>
     
     <footer class="footer">
-        <a class="logo" href="#">Web<span class="footer-logo">Studio</span></a>
+        <a class="logo link" href="#">Web<span class="footer-logo">Studio</span></a>
             <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </footer>
         
