--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="./index.html"> Studio</a></li>
                 <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-link link" href="#">Contacts</a></li>
+                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
             <address class="adress">
@@ -36,7 +36,6 @@
     <main>
         <section>
             <h1 hidden>Advantages</h1>
-            <h2 hidden>Iformation</h2>
             <ul class="filters-list list">
                 <li class="filters-item">
                     <button class="filters-btn" type="button">All</button>
@@ -57,63 +56,63 @@
 
             <ul class="list">
                 <li class="banking-item">
-                    <a  class="banking-link link" href="#">
+                    <a  class="banking-link link" href="">
                         <img class="banking-photo" src="./images/img-1.jpg" alt="photo-1" width="360" height="300">
                         <h2 class="banking-text">Banking App Interface Concept</h2>
                         <p class="banking-desc">App</p>
                     </a>
                 </li>
                 <li class="banking-item">
-                    <a  class="banking-link link" href="#">
+                    <a  class="banking-link link" href="">
                         <img class="banking-photo" src="./images/img-2.jpg" alt="photo-2" width="360" height="300">
                         <h2 class="banking-text">Cashless Payment</h2>
                         <p class="banking-desc">Marketing</p>
                     </a>
                 </li>
                 <li class="banking-item">
-                    <a  class="banking-link link" href="#">
+                    <a  class="banking-link link" href="">
                         <img class="banking-photo" src="./images/img-3.jpg" alt="photo-3" width="360" height="300">
                         <h2 class="banking-text">Meditation App</h2>
                         <p class="banking-desc">App</p>
                     </a>
                 </li>
                 <li class="taxi-item">
-                    <a class="taxi-link link" href="#">
+                    <a class="taxi-link link" href="">
                         <img class="taxi-photo" src="./images/img-4.jpg" alt="photo-4" width="360" height="300">
                         <h2 class="taxi-text">Taxi Service</h2>
                         <p class="taxi-desc">Marketing</p>
                     </a>
                 </li>
                 <li class="taxi-item">
-                    <a class="taxi-link link" href="#">
+                    <a class="taxi-link link" href="">
                         <img class="taxi-photo" src="./images/img-5.jpg" alt="photo-5" width="360" height="300">
                         <h2 class="taxi-text">Screen Illustrations</h2>
                         <p class="taxi-desc">Design</p>
                     </a>
                 </li>
             <li class="taxi-item">
-                <a class="taxi-link link" href="#">
+                <a class="taxi-link link" href="">
                     <img class="taxi-photo" src="./images/img-6.jpg" alt="photo-6" width="360" height="300">
                     <h2 class="taxi-text">Online Courses</h2>
                     <p class="taxi-desc">Marketing</p>
                 </a>
             </li>
             <li class="instagram-item">
-                <a class="instagram-link link" href="#">
+                <a class="instagram-link link" href="">
                     <img class="instagram-photo" src="./images/img-7.jpg" alt="photo-7" width="360" height="300">
                     <h2 class="instagram-text">Instagram Stories Concept</h2>
                     <p class="instagram-desc" >Design</p>
                 </a>
             </li>
             <li class="instagram-item">
-                <a class="instagram-link link" href="#">
+                <a class="instagram-link link" href="">
                     <img class="instagram-photo" src="./images/img-8.jpg" alt="photo-8" width="360" height="300">
                     <h2 class="instagram-text">Organic Food</h2>
                     <p class="instagram-desc">Web Site</p>
                 </a>
             </li>
             <li class="instagram-item">
-                <a  class="instagram-link link" href="#">
+                <a  class="instagram-link link" href="">
                     <img class="instagram-photo" src="./images/img-9.jpg" alt="photo-9" width="360" height="300">
                     <h2 class="instagram-text">Fresh Coffee</h2>
                     <p class="instagram-desc">Web Site</p>
