--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul class="header-list list">
                 <li class="header-item"><a class="header-link link" href="./index.html"> Studio</a></li>
                 <li class="header-item"><a class="header-link link" href="./portfolio.html">Portfolio</a></li>
-                <li class="header-item"><a class="header-link link" href="#">Contacts</a></li>
+                <li class="header-item"><a class="header-link link" href="">Contacts</a></li>
             </ul>
         </nav>
             <address class="adress">
