--- a/portfolio.html
+++ b/portfolio.html
@@ -79,43 +79,43 @@
                 <li class="taxi-item">
                     <a class="taxi-link link" href="">
                         <img class="taxi-photo" src="./images/img-4.jpg" alt="photo-4" width="360" height="300">
-                        <h2 class="taxi-text">Taxi Service</h2>
-                        <p class="taxi-desc">Marketing</p>
+                        <h2 class="banking-text">Taxi Service</h2>
+                        <p class="banking-desc">Marketing</p>
                     </a>
                 </li>
                 <li class="taxi-item">
                     <a class="taxi-link link" href="">
                         <img class="taxi-photo" src="./images/img-5.jpg" alt="photo-5" width="360" height="300">
-                        <h2 class="taxi-text">Screen Illustrations</h2>
-                        <p class="taxi-desc">Design</p>
+                        <h2 class="banking-text">Screen Illustrations</h2>
+                        <p class="banking-desc">Design</p>
                     </a>
                 </li>
             <li class="taxi-item">
                 <a class="taxi-link link" href="">
                     <img class="taxi-photo" src="./images/img-6.jpg" alt="photo-6" width="360" height="300">
-                    <h2 class="taxi-text">Online Courses</h2>
-                    <p class="taxi-desc">Marketing</p>
+                    <h2 class="banking-text">Online Courses</h2>
+                    <p class="banking-desc">Marketing</p>
                 </a>
             </li>
             <li class="instagram-item">
                 <a class="instagram-link link" href="">
                     <img class="instagram-photo" src="./images/img-7.jpg" alt="photo-7" width="360" height="300">
-                    <h2 class="instagram-text">Instagram Stories Concept</h2>
-                    <p class="instagram-desc" >Design</p>
+                    <h2 class="banking-text">Instagram Stories Concept</h2>
+                    <p class="banking-desc" >Design</p>
                 </a>
             </li>
             <li class="instagram-item">
                 <a class="instagram-link link" href="">
                     <img class="instagram-photo" src="./images/img-8.jpg" alt="photo-8" width="360" height="300">
-                    <h2 class="instagram-text">Organic Food</h2>
-                    <p class="instagram-desc">Web Site</p>
+                    <h2 class="banking-text">Organic Food</h2>
+                    <p class="banking-desc">Web Site</p>
                 </a>
             </li>
             <li class="instagram-item">
                 <a  class="instagram-link link" href="">
                     <img class="instagram-photo" src="./images/img-9.jpg" alt="photo-9" width="360" height="300">
-                    <h2 class="instagram-text">Fresh Coffee</h2>
-                    <p class="instagram-desc">Web Site</p>
+                    <h2 class="banking-text">Fresh Coffee</h2>
+                    <p class="banking-desc">Web Site</p>
                 </a>
             </li>
         </ul>
